// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductSummary /> component should match the snapshot 1`] = `
<DocumentFragment>
  <section
    class="container-mock"
  >
    <div
      class="t-heading-3 c-muted-1 fw3 mv4 flex items-center justify-center"
    >
      <span>
        Mount your Kit
      </span>
    </div>
    <div
      class="slider-mock"
    >
      <div
        class="container flex flex-row items-center justify-center b--muted-5 pv3 w-100"
      >
        <div
          class="flex flex-row items-center justify-center c-muted-1"
        >
          <div
            class="item"
          >
            <div
              class="flex flex-row"
            >
              <div
                class="pl4"
              >
                <div
                  class="extension-point-mock"
                />
              </div>
              <div
                class="flex flex-column items-center w2"
              />
            </div>
          </div>
        </div>
        <span
          class="c-muted-1"
        >
          <svg
            class="w2 IconEquals"
            height="44"
            width="44"
          >
            <rect
              height="44"
              width="44"
            />
          </svg>
        </span>
        <div
          class="listDetails flex flex-column items-center justify-center tc ph7"
        >
          <div
            class="t-body c-muted-1 mv3"
          >
            <span>
              Take all 1 products
            </span>
          </div>
          <div
            class="pv4"
          >
            <div
              class="product-price-mock"
            />
          </div>
          <div
            class="buybutton-mock"
          >
            <span>
              Buy Kit
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<ProductSummary /> component should match the snapshot with removal and swap 1`] = `
<DocumentFragment>
  <section
    class="container-mock"
  >
    <div
      class="t-heading-3 c-muted-1 fw3 mv4 flex items-center justify-center"
    >
      <span>
        Mount your Kit
      </span>
    </div>
    <div
      class="slider-mock"
    >
      <div
        class="container flex flex-row items-center justify-center b--muted-5 pv3 w-100"
      >
        <div
          class="flex flex-row items-center justify-center c-muted-1"
        >
          <div
            class="item"
          >
            <div
              class="flex flex-row"
            >
              <div
                class="pl4"
              >
                <div
                  class="extension-point-mock"
                />
              </div>
              <div
                class="flex flex-column items-center w2"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-row items-center justify-center c-muted-1"
        >
          <svg
            class="w2 IconPlus"
            height="45"
            width="45"
          >
            <rect
              height="45"
              width="45"
            />
          </svg>
          <div
            class="item"
          >
            <div
              class="flex flex-row"
            >
              <div
                class="pl4"
              >
                <div
                  class="extension-point-mock"
                />
              </div>
              <div
                class="flex flex-column items-center w2"
              >
                <div
                  class="pointer flex items-center mh3 mv3 c-on-base"
                >
                  <svg
                    class="w1 h1 IconRemove"
                    height="21"
                    width="21"
                  >
                    <rect
                      height="21"
                      width="21"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="c-muted-1"
        >
          <svg
            class="w2 IconEquals"
            height="44"
            width="44"
          >
            <rect
              height="44"
              width="44"
            />
          </svg>
        </span>
        <div
          class="listDetails flex flex-column items-center justify-center tc ph7"
        >
          <div
            class="t-body c-muted-1 mv3"
          >
            <span>
              Take all 2 products
            </span>
          </div>
          <div
            class="pv4"
          >
            <div
              class="product-price-mock"
            />
          </div>
          <div
            class="buybutton-mock"
          >
            <span>
              Buy Kit
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
